10Jan02=======================================================================
1. set SO_LINGER = 0 to try to prevent the system sending data on a closing
socket. This MAY help some of the hanging problems.
2. do the same on the C client (which means DON'T FORGET to make it).
08Jan02=======================================================================
1. altered sh/qrz to point to the new server
2. alter the character set handling a bit to make it better for spanish
06Jan02=======================================================================
1. fix leading space removal from messages input from the keyboard
2. make some mods to allow perl 5.7.2 to run
3. create $DXProt::eph_restime to allow variable slugging of ephemeral dups
4. create $DXProt::eph_info_restime to allow a long dupe time for these
5. create $DXProt::eph_pc34 to allow a short anti dupe slug for rcmd loops
6. Add a new sysop cmd 'save' which will save the output of any command (or
list of commands in "<cmd>") to a file.
7. Add a new command "echo" which echos its argument to the screen (useful
for titling in the save command above.
8. Increase interval between logins causing for/opernam to 60 days (from 30)
+ a random factor between 0 and 9.
9. Added Italian translation of Messages from Luca IT9ROT (thank you 
very much).
10. Added the /<cmd> feature (as in talk) to execute a cmd whilst typing a 
message, then enhanced it so that if you do //sh/dx (for instance) it will
put the result into the message (as well as show it to you).
11. Added the // feature to talk as well. 
02Jan02=======================================================================
1. updated the copyright dates
2. modernised and extended the Windows instructions a bit.
3. added a TODO file which is the list of things that I need to do. Please
badger me to put YOUR enhancement on this list. It will then get done.
31Dec01=======================================================================